@@ -13,6 +13,8 @@ x.x.x (XX-XX-XXXX)
 
 - Implement `ClientSession.closed` readonly property
 
+- Implement `ClientSession.connector` readonly property
+
 
 0.15.3 (04-22-2015)
 -------------------
